删除分页显示，修改md文件格式

--- a/java/index.html
+++ b/java/index.html
@@ -33,4 +33,4 @@ description: "研究生的java面试准备"
        {% endfor %}
 	</div>
 	</div>
-  {% include pagination.html %}
+  <!-- {% include pagination.html %} -->
